--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,9 @@
   <small>
     Hint: Move with <kbd>W</kbd>, <kbd>A</kbd>, <kbd>S</kbd>, <kbd>D</kbd> and shoot with <kbd>Space</kbd>
   </small>
+  <small>
+    Hint: Click on canvas to control the spaceship
+  </small>
   <p><a href="https://github.com/LeoYulinLiAa/asteroids">Source</a></p>
   <div id="app-container"></div>
 </div>
